Structure cast triggers + dispatch via OwnerScoped, add static factories
TriggerEvent.PlayerCasts gains structured 'from' (Zone.Source) and
'thisTurn' fields with withers, replacing the discard-as-flavor pattern
that lost zone-of-cast and turn-scope info that the rules engine needs
to fire correctly.

TriggerEvent.AtPhase gains a typed PhaseQualifier enum (FIRST, SECOND,
PRECOMBAT, POSTCOMBAT) preserving the twin-main-phase ordinal.

Add a sealed TriggerEvent.OwnerScoped sub-interface implemented by
AtStep and AtPhase exposing covariant withOwner — the AT_BEGINNING_OF
combiner is now a single polymorphic call instead of switch+cast.

Add becomesTapped/becomesUntapped static factories on TriggerEvent so
status-change parsers use a method reference instead of an inline
record constructor.

Apply phrase() across all the trigger-event chains that follow the
"At"/"When"/"Whenever" CI prefix (always mid-sentence): all the
"is cast" / "is countered" / step / phase / 'this turn' / 'become(s)'
chains drop ciWords/w in favor of phrase. Also drops the duplicate
w("your") arm in STEP_OWNER and uses .map(x -> x) widening (target-
typed inference makes the witness unnecessary).